--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,11 @@
             <artifactId>spring-orm</artifactId>
             <version>6.0.9</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-commons</artifactId>
+            <version>3.1.0</version>
+        </dependency>
 
     </dependencies>
     <build>
