comments and some settings files that are not needed but are auto-generated

--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,6 @@
 driver=com.mysql.jdbc.Driver
 url=jdbc:mysql://localhost:3306/dataforbooks
 username1=root
+
+# don't commit passwords to repo, pass then as a startup parameter or local config
 password=velikolepniy
