--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -1,6 +1,8 @@
 hibernate.driver_class=com.mysql.jdbc.Driver
 hibernate.connection.url=jdbc:mysql://localhost:3306/hibertest
 hibernate.connection.username=root
+
+# don't commit passwords to repo, pass then as a startup parameter or local config
 hibernate.connection.password=velikolepniy
 
 hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
