--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -1,7 +1,7 @@
 hibernate.driver_class=com.mysql.jdbc.Driver
 hibernate.connection.url=jdbc:mysql://localhost:3306/hibertest
 hibernate.connection.username=root
-hibernate.connection.password=velikolepniy
+hibernate.connection.password=
 
 hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 hibernate.show_sql=true
